--- a/templates/main.html
+++ b/templates/main.html
@@ -214,9 +214,10 @@
 	<div class="container">
 		<h1>Celestial Information</h1>
 		<div id="displayctl">
-			<button id="togglemap" onclick="togglemap();">Polar Finder</button>
-			<button id="toggleskymap" onclick="toggleskymap();">Moon Phase</button>
-			<button id="togglegpsdetails" onclick="togglegpsdetails();">Solar System</button>
+			<button id="togglepolaris" onclick="togglepolaris();">Polar Finder</button>
+			<button id="togglemoon" onclick="togglemoon();">Moon</button>
+			<button id="togglesun" onclick="togglesun();">Sun</button>
+			<button id="toggleplanets" onclick="toggleplanets();">Solar System</button>
 		</div>
 		<div id="polaris">
 			<div id="reticle">
@@ -232,13 +233,15 @@
 				<tr><td class="polarishdr">At 9 o'clock</td><td class="polarisdata"><span id="polaris_next_9"></td></tr>
 				<tr><td class="polarishdr">Altitude</td><td class="polarisdata"><span id="polaris_alt"></td></tr>
 			</table>
-			<h2 id="position_mode">Position</h2>
-			<table>
-				<tr><td class="positionhdr">Latitude</td><td class="positiondata"><span id="position_lat">&nbsp;</span></td></tr>
-				<tr><td class="positionhdr">Longitude</td><td class="positiondata"><span id="position_lon">&nbsp;</td></tr>
-				<tr><td class="positionhdr">Elevation</td><td class="positiondata"><span id="position_elev">&nbsp;</td></tr>
-				<tr><td class="positionhdr">&nbsp;</td><td class="positiondata"><button id="position_refresh" onclick="window.location.href=window.location.href;">Refresh</button></td></tr>
-			</table>
+			<div id="position">
+				<h2 id="position_mode">Position</h2>
+				<table>
+					<tr><td class="positionhdr">Latitude</td><td class="positiondata"><span id="position_lat">&nbsp;</span></td></tr>
+					<tr><td class="positionhdr">Longitude</td><td class="positiondata"><span id="position_lon">&nbsp;</td></tr>
+					<tr><td class="positionhdr">Elevation</td><td class="positiondata"><span id="position_elev">&nbsp;</td></tr>
+					<tr><td class="positionhdr">&nbsp;</td><td class="positiondata"><button id="position_refresh" onclick="window.location.href=window.location.href;">Refresh</button></td></tr>
+				</table>
+			</div>
 		</div>
 		<div id="moon">
 			<img src="assets/img/moon.png"/>
@@ -257,7 +260,7 @@
 				<tr id="new_moon_second" style="display:none;"><td class="moonhdr">Next new moon</td><td class="moondata"><span class="moon_new"></span></td></tr>
 			</table>
 		</div>
-		<div id="almanac">
+		<div id="sun">
 			<img src="assets/img/sun.png"/>
 			<h2>Sun</h2>
 			<table>
@@ -276,8 +279,10 @@
 				<tr><td class="sunhdr">Equinox</td><td class="sundata"><span id="sun_equinox"></td></tr>
 				<tr id="sun_solstice_second" style="display:none;"><td class="sunhdr">Solstice</td><td class="sundata"><span class="sun_solstice"></td></tr>
 			</table>
-			<h2>Solar System</h2>
-			<table>
+		</div>
+                <div id="planets">
+                        <h2>Solar System</h2>
+                        <table>
 				<tr><td class="planetshdr">&nbsp;</td><td class="planetshdrdata">Rise</td><td class="planetshdrdata">Transit</td><td class="planetshdrdata">Set</td><td class="planetshdrdata">Azimuth</td><td class="planetshdrdata">Altitude</td></tr>
 				<tr id="mercury"><td class="planetshdr">Mercury</td><td class="planetsdata"><span id="mercury_rise"></td><td class="planetsdata"><span id="mercury_transit"></td><td class="planetsdata"><span id="mercury_set"></td><td class="planetsdata"><span id="mercury_az"></td><td class="planetsdata"><span id="mercury_alt"></td></tr>
 				<tr id="venus"><td class="planetshdr">Venus</td><td class="planetsdata"><span id="venus_rise"></td><td class="planetsdata"><span id="venus_transit"></td><td class="planetsdata"><span id="venus_set"></td><td class="planetsdata"><span id="venus_az"></td><td class="planetsdata"><span id="venus_alt"></td></tr>
@@ -286,25 +291,35 @@
 				<tr id="saturn"><td class="planetshdr">Saturn</td><td class="planetsdata"><span id="saturn_rise"></td><td class="planetsdata"><span id="saturn_transit"></td><td class="planetsdata"><span id="saturn_set"></td><td class="planetsdata"><span id="saturn_az"></td><td class="planetsdata"><span id="saturn_alt"></td></tr>
 				<tr id="uranus"><td class="planetshdr">Uranus</td><td class="planetsdata"><span id="uranus_rise"></td><td class="planetsdata"><span id="uranus_transit"></td><td class="planetsdata"><span id="uranus_set"></td><td class="planetsdata"><span id="uranus_az"></td><td class="planetsdata"><span id="uranus_alt"></td></tr>
 				<tr id="neptune"><td class="planetshdr">Neptune</td><td class="planetsdata"><span id="neptune_rise"></td><td class="planetsdata"><span id="neptune_transit"></td><td class="planetsdata"><span id="neptune_set"></td><td class="planetsdata"><span id="neptune_az"></td><td class="planetsdata"><span id="neptune_alt"></td></tr>
-			</table>
-		</div>
+                        </table>
+			<img src="assets/img/solar_system.png"/>
+                </div>
 	</div>
 	<script type="text/javascript">
-	function togglemap() {
+	function togglepolaris() {
 			document.getElementById("polaris").style.display="block";
 			document.getElementById("moon").style.display="none";
-			document.getElementById("almanac").style.display="none";
+			document.getElementById("sun").style.display="none";
+			document.getElementById("planets").style.display="none";
 	}
-	function toggleskymap() {
+	function togglemoon() {
 			document.getElementById("polaris").style.display="none";
 			document.getElementById("moon").style.display="block";
-			document.getElementById("almanac").style.display="none";
+			document.getElementById("sun").style.display="none";
+			document.getElementById("planets").style.display="none";
 	}
-	function togglegpsdetails() {
+	function togglesun() {
 			document.getElementById("polaris").style.display="none";
 			document.getElementById("moon").style.display="none";
-			document.getElementById("almanac").style.display="block";
+			document.getElementById("sun").style.display="block";
+			document.getElementById("planets").style.display="none";
 	}
+        function toggleplanets() {
+                        document.getElementById("polaris").style.display="none";
+                        document.getElementById("moon").style.display="none";
+                        document.getElementById("sun").style.display="none";
+			document.getElementById("planets").style.display="block";
+        }
 	</script>
 </body>
 </html>
