Integrating with lxpanel weather applet

--- a/templates/main.html
+++ b/templates/main.html
@@ -32,10 +32,10 @@
         $(document).ready(function() {
 	var url = location.protocol + '//' + location.hostname + (location.port ? ':' + location.port: '');
 	var socket = io.connect(url, { path: location.pathname + 'socket.io' });
+	socket.on('emit', function () {
+		client.emit('PING');
+	});
 	socket.on('celestialdata', function(data) {
-		$("#position_lat").html(data.latitude);
-		$("#position_lon").html(data.longitude);
-		$("#position_elev").html(data.elevation);
                 $("#polaris_next_transit").html(data.polaris_next_transit);
                 $("#polaris_alt").html(data.polaris_alt);
                 $("#moon_phase").html(data.moon_phase + " (" + data.moon_light + "%)");
@@ -97,122 +97,127 @@
                 $("#neptune_az").html(data.neptune_az);
                 $("#neptune_alt").html(data.neptune_alt);
 
-		<!-- Set mode -->
-		$("#position_mode").attr("title", data.position_mode);
+				<!-- Set locality -->
+				var locality = '';
+				if ( data.alias ) {
+					$("#locality").html('for ' + data.alias );
+				} else if ( data.city ) {
+					$("#locality").html('for ' + data.city );
+				} else {
+					$("#locality").html('for ' + data.latitude + ' ' + data.longitude );
+				}
 
-		<!-- Set polaris marker -->
-		var pha = data.polaris_hour_angle;
-		pha_angle = 360 + pha * -1; <!-- reverse revolution for charting -->
-		pha_angle -= 180; <!-- set view as in polar finder scope -->
-		var rotation = "rotate(" + pha_angle + "deg)";
-		$("#polaris_marker").css("-ms-transform", rotation);
-		$("#polaris_marker").css("-webkit-transform", rotation);
-		$("#polaris_marker").css("transform", rotation);
+				<!-- Set polaris marker -->
+				var pha = data.polaris_hour_angle;
+				pha_angle = 360 + pha * -1; <!-- reverse revolution for charting -->
+				pha_angle -= 180; <!-- set view as in polar finder scope -->
+				var rotation = "rotate(" + pha_angle + "deg)";
+				$("#polaris_marker").css("-ms-transform", rotation);
+				$("#polaris_marker").css("-webkit-transform", rotation);
+				$("#polaris_marker").css("transform", rotation);
 
-		<!-- Format polaris hour angle for display -->
-		var pha = data.polaris_hour_angle;
-		var phaH = String(parseInt(pha/15));
-		var phaMtmp = (pha/15 - phaH) * 60;
-		var phaM = String(parseInt(phaMtmp));
-		var phaS = String(parseInt((phaMtmp - phaM) * 60));
-		$("#pha").html(phaH.padStart(2,'0') + ":" + phaM.padStart(2,'0') + ":" + phaS.padStart(2,'0'));
+				<!-- Format polaris hour angle for display -->
+				var pha = data.polaris_hour_angle;
+				var phaH = String(parseInt(pha/15));
+				var phaMtmp = (pha/15 - phaH) * 60;
+				var phaM = String(parseInt(phaMtmp));
+				var phaS = String(parseInt((phaMtmp - phaM) * 60));
+				$("#pha").html(phaH.padStart(2,'0') + ":" + phaM.padStart(2,'0') + ":" + phaS.padStart(2,'0'));
 
-		<!-- Compute polaris cardinal positions -->
-		var pnt = data.polaris_next_transit.split(':');
-		var p9h = (parseInt(pnt[0]) - 6);
-		var p12h = (parseInt(pnt[0]) - 12);
-		var p3h = (parseInt(pnt[0]) - 18);
-		$("#polaris_next_3").html(p3h + ':' + pnt[1] + ':' + pnt[2]);
-		$("#polaris_next_12").html(p12h + ':' + pnt[1] + ':' + pnt[2]);
-		$("#polaris_next_9").html(p9h + ':' + pnt[1] + ':' + pnt[2]);
+				<!-- Compute polaris cardinal positions -->
+				var pnt = data.polaris_next_transit.split(':');
+				var p9h = (parseInt(pnt[0]) - 6);
+				var p12h = (parseInt(pnt[0]) - 12);
+				var p3h = (parseInt(pnt[0]) - 18);
+				$("#polaris_next_3").html(p3h + ':' + pnt[1] + ':' + pnt[2]);
+				$("#polaris_next_12").html(p12h + ':' + pnt[1] + ':' + pnt[2]);
+				$("#polaris_next_9").html(p9h + ':' + pnt[1] + ':' + pnt[2]);
 
-		<!-- Indicate planets above horizon -->
-		if ( parseFloat(data.mercury_alt) > 25 ) {
-			$("#mercury").css("color", "#99cc00");
-		} else if ( parseFloat(data.mercury_alt) > 0 ) {
-			$("#mercury").css("color", "#ff9900");
-		} else {
-			$("#mercury").css("color", "#fff");
-		}
+				<!-- Indicate planets above horizon -->
+				if ( parseFloat(data.mercury_alt) > 25 ) {
+					$("#mercury").css("color", "#99cc00");
+				} else if ( parseFloat(data.mercury_alt) > 0 ) {
+					$("#mercury").css("color", "#ff9900");
+				} else {
+					$("#mercury").css("color", "#fff");
+				}
 
-		if ( parseFloat(data.venus_alt) > 25 ) {
-			$("#venus").css("color", "#99cc00");
-		} else if ( parseFloat(data.venus_alt) > 0 ) {
-			$("#venus").css("color", "#ff9900");
-		} else {
-			$("#venus").css("color", "#fff");
-		}
+				if ( parseFloat(data.venus_alt) > 25 ) {
+					$("#venus").css("color", "#99cc00");
+				} else if ( parseFloat(data.venus_alt) > 0 ) {
+					$("#venus").css("color", "#ff9900");
+				} else {
+					$("#venus").css("color", "#fff");
+				}
 
-		if ( parseFloat(data.mars_alt) > 25 ) {
-			$("#mars").css("color", "#99cc00");
-		} else if ( parseFloat(data.mars_alt) > 0 ) {
-			$("#mars").css("color", "#ff9900");
-		} else {
-			$("#mars").css("color", "#fff");
-		}
+				if ( parseFloat(data.mars_alt) > 25 ) {
+					$("#mars").css("color", "#99cc00");
+				} else if ( parseFloat(data.mars_alt) > 0 ) {
+					$("#mars").css("color", "#ff9900");
+				} else {
+					$("#mars").css("color", "#fff");
+				}
 
-		if ( parseFloat(data.jupiter_alt) > 25 ) {
-			$("#jupiter").css("color", "#99cc00");
-		} else if ( parseFloat(data.jupiter_alt) > 0 ) {
-			$("#jupiter").css("color", "#ff9900");
-		} else {
-			$("#jupiter").css("color", "#fff");
-		}
+				if ( parseFloat(data.jupiter_alt) > 25 ) {
+					$("#jupiter").css("color", "#99cc00");
+				} else if ( parseFloat(data.jupiter_alt) > 0 ) {
+					$("#jupiter").css("color", "#ff9900");
+				} else {
+					$("#jupiter").css("color", "#fff");
+				}
 
-		if ( parseFloat(data.saturn_alt) > 25 ) {
-			$("#saturn").css("color", "#99cc00");
-		} else if ( parseFloat(data.saturn_alt) > 0 ) {
-			$("#saturn").css("color", "#ff9900");
-		} else {
-			$("#saturn").css("color", "#fff");
-		}
+				if ( parseFloat(data.saturn_alt) > 25 ) {
+					$("#saturn").css("color", "#99cc00");
+				} else if ( parseFloat(data.saturn_alt) > 0 ) {
+					$("#saturn").css("color", "#ff9900");
+				} else {
+					$("#saturn").css("color", "#fff");
+				}
 
-		if ( parseFloat(data.uranus_alt) > 25 ) {
-			$("#uranus").css("color", "#99cc00");
-		} else if ( parseFloat(data.uranus_alt) > 0 ) {
-			$("#uranus").css("color", "#ff9900");
-		} else {
-			$("#uranus").css("color", "#fff");
-		}
+				if ( parseFloat(data.uranus_alt) > 25 ) {
+					$("#uranus").css("color", "#99cc00");
+				} else if ( parseFloat(data.uranus_alt) > 0 ) {
+					$("#uranus").css("color", "#ff9900");
+				} else {
+					$("#uranus").css("color", "#fff");
+				}
 
-		if ( parseFloat(data.neptune_alt) > 25 ) {
-			$("#neptune").css("color", "#99cc00");
-		} else if ( parseFloat(data.neptune_alt) > 0 ) {
-			$("#neptune").css("color", "#ff9900");
-		} else {
-			$("#neptune").css("color", "#fff");
-		}
+				if ( parseFloat(data.neptune_alt) > 25 ) {
+					$("#neptune").css("color", "#99cc00");
+				} else if ( parseFloat(data.neptune_alt) > 0 ) {
+					$("#neptune").css("color", "#ff9900");
+				} else {
+					$("#neptune").css("color", "#fff");
+				}
 
-		<!-- Set  Equinox and Solstice in order-->
-		var ss = new Date(data.sun_solstice);
-		var se = new Date(data.sun_equinox);
-		if (ss < se) { 
-			$("#sun_solstice_first").css("display", "");
-			$("#sun_solstice_second").css("display", "none");
-		} else {
-			$("#sun_solstice_first").css("display", "none");
-			$("#sun_solstice_second").css("display", "");
-		};
+				<!-- Set  Equinox and Solstice in order-->
+				var ss = new Date(data.sun_solstice);
+				var se = new Date(data.sun_equinox);
+				if (ss < se) { 
+					$("#sun_solstice_first").css("display", "");
+					$("#sun_solstice_second").css("display", "none");
+				} else {
+					$("#sun_solstice_first").css("display", "none");
+					$("#sun_solstice_second").css("display", "");
+				};
 
-		<!-- Set  New Moon and Full Moon in order-->
-		var nm = new Date(data.moon_new);
-		var fm = new Date(data.moon_full);
-		if (nm < fm) { 
-			$("#new_moon_first").css("display", "");
-			$("#new_moon_second").css("display", "none");
-		} else {
-			$("#new_moon_first").css("display", "none");
-			$("#new_moon_second").css("display", "");
-		};
-				
-		$("#position_refresh").css("display", "block");
-            });
-        });
+				<!-- Set  New Moon and Full Moon in order-->
+				var nm = new Date(data.moon_new);
+				var fm = new Date(data.moon_full);
+				if (nm < fm) { 
+					$("#new_moon_first").css("display", "");
+					$("#new_moon_second").css("display", "none");
+				} else {
+					$("#new_moon_first").css("display", "none");
+					$("#new_moon_second").css("display", "");
+				};
+			});
+		});
     </script>
 </head>
 <body>
 	<div class="container">
-		<h1>Celestial Information</h1>
+		<h1>Celestial Information <span id="locality"></span></h1>
 		<div id="displayctl">
 			<button id="togglepolaris" onclick="togglepolaris();">Polar Finder</button>
 			<button id="togglemoon" onclick="togglemoon();">Moon</button>
@@ -233,15 +238,6 @@
 				<tr><td class="polarishdr">At 9 o'clock</td><td class="polarisdata"><span id="polaris_next_9"></td></tr>
 				<tr><td class="polarishdr">Altitude</td><td class="polarisdata"><span id="polaris_alt"></td></tr>
 			</table>
-			<div id="position">
-				<h2 id="position_mode">Position</h2>
-				<table>
-					<tr><td class="positionhdr">Latitude</td><td class="positiondata"><span id="position_lat">&nbsp;</span></td></tr>
-					<tr><td class="positionhdr">Longitude</td><td class="positiondata"><span id="position_lon">&nbsp;</td></tr>
-					<tr><td class="positionhdr">Elevation</td><td class="positiondata"><span id="position_elev">&nbsp;</td></tr>
-					<tr><td class="positionhdr">&nbsp;</td><td class="positiondata"><button id="position_refresh" onclick="window.location.href=window.location.href;">Refresh</button></td></tr>
-				</table>
-			</div>
 		</div>
 		<div id="moon">
 			<img src="assets/img/moon.png"/>
